# process

./: CMakeLists.txt
include/: process.hpp
src/: process.cpp
test/: CMakeLists.txt
test/samples/: hello_world.cpp  infinite_loop.cpp
test/tests/: process.cpp
